feat(locales): add new translation keys and update existing ones
Add new translation keys for various languages including zh_cn, pt, bg, ru, zh_tw, tr, nl, es, fr, and de. These changes include new error messages, prompts, and additional UI text to improve user experience and localization. Also, reorder initialization code in main.py for better readability.

--- a/locales/bg.json
+++ b/locales/bg.json
@@ -20,7 +20,17 @@
         "totally_reset": "Нулирайте изцяло Курсор",
         "outdate": "Изтекъл срок",
         "temp_github_register": "Временно регистриране с GitHub",
-        "coming_soon": "Очаквайте скоро"
+        "coming_soon": "Очаквайте скоро",
+        "fixed_soon": "Ще бъде поправено скоро",
+        "contribute": "Принос към проекта",
+        "config": "Покажи конфигурацията",
+        "delete_google_account": "Изтрий Google акаунта на Cursor",
+        "continue_prompt": "Продължи? (y/N): ",
+        "operation_cancelled_by_user": "Операцията е отменена от потребителя",
+        "exiting": "Излизане ......",
+        "bypass_version_check": "Пропусни проверката на версията на Cursor",
+        "check_user_authorized": "Провери оторизацията на потребителя",
+        "select_chrome_profile": "Избери Chrome профил"
     },
     "languages": {
         "en": "English",
