--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -205,7 +205,9 @@
         "try_install_browser": "尝试使用包管理器安装浏览器",
         "tracking_processes": "正在跟踪 {count} 个 {browser} 进程",
         "no_new_processes_detected": "未检测到新的 {browser} 进程",
-        "could_not_track_processes": "无法跟踪 {browser} 进程: {error}"
+        "could_not_track_processes": "无法跟踪 {browser} 进程: {error}",
+        "human_verify_error": "无法验证用户是人类，正在重试...",
+        "max_retries_reached": "已达到最大重试次数，注册失败。"
     },
     "auth": {
         "title": "Cursor 认证管理器",
@@ -743,4 +745,4 @@
         "unexpected_error": "令牌刷新过程中出现意外错误: {error}",
         "extraction_error": "提取令牌时出错: {error}"
     }
-} 
+}
